[Test] to solve bug that causes the about me section to be bigger on small screens on the live version of the website

--- a/src/styling/components/_main.scss
+++ b/src/styling/components/_main.scss
@@ -70,8 +70,7 @@ main {
     }
 
     .about-me-container {
-        padding: 100px 20px 160px 20px;
-        background-color: blue;
+        padding: 100px 20px 200px 20px;
 
         h2 {
             font-family: 'Inter', sans-serif;
